# miniapp

./: .gitignore  JSShell.cpp  JSShell.hpp  Shell.cpp  Shell.hpp
.github/: workflows
.github/workflows/: build_for_S6P  build_for_S6P.yml  build_for_a6p.yml
jsapi/: CMakeLists.txt  README.md
jsapi/src/: JSAPI.cpp
jsapi/src/AI/: AI.cpp
jsapi/src/Shell/: JSShell.cpp  JSShell.hpp  Shell.cpp  Shell.hpp
jsapi/src/Update/: JSUdate.cpp  JSUdate.hpp  JSUpdate.cpp  Update.cpp  Update.hpp
tools/: build.sh  downloadHeaders.sh  getVersionInfo.sh  gnutar
ui/: package.json
ui/src/: app.js  app.json
ui/src/@types/: langningchen.d.ts
ui/src/pages/about/: about.less  about.ts  about.vue
ui/src/pages/ai/: ai.less  ai.ts  ai.vue
ui/src/pages/camera/: camera.less  camera.ts  camera.vue
ui/src/pages/deviceinfo/: deviceinfo.less  deviceinfo.ts  deviceinfo.vue
ui/src/pages/fileEditor/: fileEditor.less  fileEditor.ts  fileEditor.vue
ui/src/pages/fileManager/: fileManager.less  fileManager.ts  fileManager.vue  fileManagerService.ts  fileTypes.ts  types.ts
ui/src/pages/index/: index.less  index.ts  index.vue
ui/src/pages/misc/: misc.less  misc.ts  misc.vue
ui/src/pages/shell/: index.less  index.ts  index.vue  shell.less  shell.ts  shell.vue
ui/src/pages/shellSettings/: shellSettings.less
ui/src/pages/softKeyboard/: softKeyboard.ts
ui/src/pages/update/: update.less  update.ts  update.vue
ui/src/styles/: section.less
ui/src/utils/: softKeyboardUtils.ts
